# doomfire-wallpaper

./: .gitmodules  Cargo.toml  LICENSE  PKGBUILD  README.MD  README.md  dfpaper  dfpaper.sh  doom-fire-wallpaper.service  doomfire.ts  install.sh  render_and_set.ts
.github/workflows/: release.yml
rust/: Cargo.toml
rust/src/: doom_fire.rs  main.rs  render.rs  wallpaper.rs
src/: config.rs  doom_fire.rs  fire_types.rs  main.rs  particle.rs  perlin.rs  render.rs  wallpaper.rs
