[package]
name = "doom-fire-wallpaper"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Animated Doom fire effect as a Hyprpaper wallpaper"
license = "MIT"

[dependencies]
image = { version = "0.25", features = ["webp"] }         # For image creation and saving
rand = "0.9.2"           # For randomness in fire decay and wind
anyhow = "1.0"         # For easy error handling
rayon = "1.8"          # For parallel rending
serde = { version = "1", features = ["derive"] }
toml = "0.9.3"
serde_json = "1.0.141"
strum_macros = "0.27.2"
strum = "0.27.2"
minifb = "0.28.0"
dirs = "6.0.0"
gdk-pixbuf = "0.21.0"
glib = "0.21.0"
gtk4 = "0.10.0"

[[bin]]
name = "doom-fire-wallpaper"
path = "src/main.rs"
