[package]
name = "doomfire-wallpaper"
version = "1.1.0"
edition = "2024"
authors = ["Larry Oates <leafman12345@gmail.com>"]
description = "Animated Doom fire effect as a Hyprpaper wallpaper"
license = "0BSD"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
gdk-pixbuf = "0.21.0"
glib = "0.21.0"
gdk4-x11 = { version = "0.10.0", optional = true }
gtk4-layer-shell = { version = "0.3.0", optional = true }
gtk4 = "0.10.0"
image = { version = "0.25", features = ["webp"] }         # For image creation and saving
rand = "0.9.2"           # For randomness in fire decay and wind
rayon = "1.8"          # For parallel rending
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
toml = "0.9.3"

[features]
default = ["wayland"]
wayland = ["gtk4-layer-shell"]
x11 = ["gdk4-x11"]

[[bin]]
name = "doomfire-wallpaper"
path = "src/main.rs"
