[package]
name = "doomfire_wallpaper"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Animated Doom fire effect as a Hyprpaper wallpaper"
license = "MIT"

[dependencies]
image = "0.24"         # For image creation and saving
rand = "0.8"           # For randomness in fire decay and wind
anyhow = "1.0"         # For easy error handling
dirs = "5.0"           # For getting the user's home directory
rayon = "1.8"          # For parallel rending
